day-10-kubernetes-networking-and-traffic-control/examples/gateway-api-example.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: platform-route
spec:
  parentRefs:
    - name: external-gateway

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api

      backendRefs:
        - name: backend-service
          port: 80
