day-10-kubernetes-networking-and-traffic-control/examples/runtime-traffic-routing.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traffic-splitting
spec:
  parentRefs:
    - name: production-gateway

  rules:
    - backendRefs:
        - name: stable-backend
          port: 80
          weight: 90

        - name: canary-backend
          port: 80
          weight: 10
