day-10-kubernetes-networking-and-traffic-control/examples/cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: runtime-isolation
spec:
  endpointSelector:
    matchLabels:
      app: backend

  ingress:
    - fromEndpoints:
        - matchLabels:
            app: frontend

  egress:
    - toEndpoints:
        - matchLabels:
            app: database
